--- a/assets/scss/pages/_result.scss
+++ b/assets/scss/pages/_result.scss
@@ -322,6 +322,7 @@
                     font-weight: 500;
                     color:#EA5504;
                     padding-top: 12px;
+                    font-family: Arial, Sans-serif;
                 }
             }
             tbody {
